test/errors/for3.input.asm

* = $801

    lda #0
!let start=1
!for i in start {
    lda #0
}
    rts
